--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<!--
-  TODO:
-    >> Add lisence
--->
 <!DOCTYPE html>
 <html>
   <head>
@@ -25,7 +21,10 @@
       <script src="lib/scrollreveal.min.js" type="text/javascript"></script>
 
       <!-- MIXPANEL -->
+      <script src="lib/mixpanel.js" type="text/javascript"></script>
       <script type="text/javascript">
+        mixpanel.init("df4c38212ba084f9c0bbeb9f930377cc");
+        mixpanel.track("Load");
       </script>
 
       <!-- CODEMIRROR -->
@@ -58,7 +57,7 @@
   <body>
     <h1>Cornet.JS</h1>
 
-    <iframe src="http://ghbtns.com/github-btn.html?user=cornet-js&repo=Cornet.JS&type=star&count=true&size=none" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
+    <iframe src="//ghbtns.com/github-btn.html?user=cornet-js&repo=Cornet.JS&type=star&count=true&size=none" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
 
     <p>Lorem <code><span class="cm-s-dark">ipsum dolor</span></code> sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
@@ -74,5 +73,9 @@
 
   &lt;/body&gt;
 &lt;/html&gt;</textarea></code>
+
+<a href="https://js.org" target="_blank" title="JS.ORG | JavaScript Community">
+<img src="https://logo.js.org/dark_horz.png" width="102" alt="JS.ORG Logo"/></a>
+<!-- alternatives [bright|dark]_[horz|vert|tiny].png (width[horz:102,vert:50,tiny:77]) -->
   </body>
 </html>
